# programming-lab

./: README.md  go.mod  index.html  main.js  package.json  sort.c  style.css
C-Programming/src/: task1.c  task5
RGR/: CMakeLists.txt  leaders.txt  rgr.c  stats.txt
day2/engine/: Engine2.go
day2/entities/: Entities.go
day2/mazes/: mazes7.txt
day2/world/: word2.go
drugoe/day2/: main.go
drugoe/go/: coverage.out  file2.go  file4.go  go.mod
drugoe/include/: void.h
drugoe/programming-lab2/: void.h
drugoe/staroe/: hello.c  lab18.1  lab18.1.c  lab7  lab8
drugoe/trenirovka/: kirpichi.c
drugoe/web-технологии/: package.json
githab 1 семестр/: README.md
githab 2 семестр/RGR/: config.txt  rgr  rgr.c
githab 2 семестр/lab10/: fun.c  lab10  main.c  struct.h
githab 2 семестр/lab13/: Makefile
githab 2 семестр/lab15/: lab15.c
githab 2 семестр/lab16/: grafik.py  threads.md
githab 2 семестр/lab19/atm/: CMakeLists.txt  atm_engine.cpp  atm_engine.h  file_storage.h  journal.cpp  recovery.h  transaction.h
githab 2 семестр/src/: task2.c  task4
go/: file1.go  file3.go
go/KYRSACH/: .env  go.mod  main.go
go/utils/: file4.go  task5_test.go
lab10/: lab10.c  main
lab12/: staff.csv
lab13/src/: main.c  void.c
lab14/: lab14.2.c
lab16/: lab16.c
lab17/: CMakeLists.txt  Lists.txt  lab17.c  tests.c
lab18/src/: main.cpp
lab19/atm/: account.cpp  account.h  card.cpp  card.h  journal.h  (+5 more)
programming-lab2/: main.c  void.c
src/: 1  2  4  5  p  p.c  task1.c  task2.c  task3.c  task4.c  task5.c  task_star.c
staroe/: lab8.c
web-технологии/: index.js
(+49 files in other folders)
